--- a/assets/css/putrapakuan-v4.css
+++ b/assets/css/putrapakuan-v4.css
@@ -15,6 +15,23 @@
   > ©putrapakuan 2020 Alright Reserved
   ================================================
 */
+
+/*
+====================================
+= Konfigurasi, Warna dan gaya lain =
+====================================
+*/
+:root{
+	--background-default-blue: linear-gradient(20deg, rgba(0,20,87,1) 0%, rgba(9,54,120,1) 40%, rgba(62,149,255,1) 100%);
+
+	--background-green: linear-gradient(20deg, rgba(0,89,115,1) 0%, rgba(8,105,159,1) 40%, rgba(6,46,240,1) 100%);
+
+	--background-lightblue: linear-gradient(20deg, rgba(0,89,115,1) 0%, rgba(8,105,159,1) 40%, rgba(6,46,240,1) 100%);
+
+	--background-darkblue: linear-gradient(22deg, rgba(50,0,68,1) 0%, rgba(9,15,121,1) 35%, rgba(0,212,255,1) 100%);
+
+	--background-bluesea: linear-gradient(344deg, rgba(0,123,199,1) 24%, rgba(124,195,188,1) 85%);
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -43,24 +60,7 @@ body {
 	line-height: 1;
 	font-family: OpenSans;
 	background-repeat: no-repeat;
-
-	/*Warna default*/
-	background: -webkit-linear-gradient(20deg, rgba(0,20,87,1) 0%, rgba(9,54,120,1) 40%, rgba(62,149,255,1) 100%);
-	background: -webkit-linear-gradient(70deg, rgba(0,20,87,1) 0%, rgba(9,54,120,1) 40%, rgba(62,149,255,1) 100%);
-	background: linear-gradient(20deg, rgba(0,20,87,1) 0%, rgba(9,54,120,1) 40%, rgba(62,149,255,1) 100%);
-
-	/*Kehijauan*/
-	/*background: -webkit-linear-gradient(20deg, rgba(0,89,115,1) 0%, rgba(8,105,159,1) 40%, rgba(6,46,240,1) 100%);
-	background: linear-gradient(20deg, rgba(0,89,115,1) 0%, rgba(8,105,159,1) 40%, rgba(6,46,240,1) 100%);*/
-
-	/*Biru Cerah*/
-	/*background: -webkit-linear-gradient(351deg, rgba(0,27,115,1) 0%, rgba(8,69,159,1) 14%, rgba(62,149,255,1) 100%);
-	background: linear-gradient(351deg, rgba(0,27,115,1) 0%, rgba(8,69,159,1) 14%, rgba(62,149,255,1) 100%);*/
-
-	/*Biru Gelap*/
-	/*background: -webkit-linear-gradient(68deg, rgba(50,0,68,1) 0%, rgba(9,15,121,1) 35%, rgba(0,212,255,1) 100%);
-	background: linear-gradient(22deg, rgba(50,0,68,1) 0%, rgba(9,15,121,1) 35%, rgba(0,212,255,1) 100%);*/
-
+	background: var(--background-default-blue);
 }
 
 ol, ul {
